# gh-stats

./: .gitignore  ChangeLog.md  LICENSE  README.md  cabal.project  default.nix  gh-stats.cabal  gh-stats.nix  nixpkgs.nix  shell.nix
ci/: ci.nix  jobsets.json  jobsets.nix
exe/: Main.hs
nix/: github.nix  overlay.nix
src/: GhStats.hs  Main.hs
src/GhStats/: Db.hs  Main.hs  Types.hs  Web.hs
src/GhStats/Db/: Types.hs
src/GitHub/: Lens.hs
src/GitHub/Lens/: Helpers.hs
test/: .dir-locals.el  Main.hs
test/GhStats/: DbTest.hs  Gens.hs  Test.hs
