cabal-version:       2.2

name:                gh-stats
version:             0.1.0.0
synopsis:            Pull Github stats for an organisation and its repos
-- description:
homepage:            https://qfpl.io
license:             BSD-3-Clause
license-file:        LICENSE
author:              Queensland Functional Programming Lab <oᴉ˙ldɟb@llǝʞsɐɥ>
maintainer:          Queensland Functional Programming Lab <oᴉ˙ldɟb@llǝʞsɐɥ>
copyright:           Copyright (c) 2019, Commonwealth Scientific and Industrial Research Organisation (CSIRO) ABN 41 687 119 230.
category:            Web
build-type:          Simple
extra-source-files:  ChangeLog.md

common base { build-depends: base >=4.11 && <4.13 }
common github { build-depends: github >=0.22 && <0.23 }
common sqlite-simple { build-depends: sqlite-simple >=0.4 && <0.5 }

library
  import:              base
                     , github
                     , sqlite-simple

  build-depends:
                       bytestring == 0.10.*
                     , http-client >=0.5 && <0.6
                     , lens == 4.17.*
                     , mtl >=2.2 && <2.3
                     , optparse-applicative == 0.14.*
                     , sqlite-simple-errors >=0.6 && <0.7
                     , sv == 1.3.*
                     , text == 1.2.*
                     , time == 1.8.*
                     , vector >=0.12 && <0.13

  exposed-modules:     GhStats
                     , GhStats.Db
                     , GhStats.Main
                     , GhStats.Types
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

executable gh-stats
  import:              base
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:
                       gh-stats
  hs-source-dirs:      exe
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite tasty
  import:              base
                     , github
                     , sqlite-simple
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:
                       gh-stats
                     , tasty >=1.2 && <1.3
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
