cabal-version:       2.2

name:                gh-stats
version:             0.1.0.0
synopsis:            Pull Github stats for an organisation and its repos
-- description:
homepage:            https://qfpl.io
license:             BSD-3-Clause
license-file:        LICENSE
author:              Queensland Functional Programming Lab <oᴉ˙ldɟb@llǝʞsɐɥ>
maintainer:          Queensland Functional Programming Lab <oᴉ˙ldɟb@llǝʞsɐɥ>
copyright:           Copyright (c) 2019, Commonwealth Scientific and Industrial Research Organisation (CSIRO) ABN 41 687 119 230.
category:            Web
build-type:          Simple
extra-source-files:  ChangeLog.md

common base { build-depends: base >=4.11 && <4.13 }
common github { build-depends: github >=0.22 && <0.23 }
common sqlite-simple { build-depends: sqlite-simple >=0.4 && <0.5 }
common sqlite-simple-errors { build-depends: sqlite-simple-errors >=0.6 && <0.7 }
common mtl { build-depends: mtl >=2.2 && <2.3 }
common text { build-depends: text >=1.2  && <1.3 }
common time { build-depends: time >=1.8 && <1.9 }
common containers { build-depends: containers >=0.6 && <0.7 }
common vector {build-depends: vector >=0.12 && <0.13 }
common lens { build-depends: lens >= 4.17 && <4.18 }
common validation { build-depends: validation >=1 && <1.1 }

library
  import:              base
                     , containers
                     , github
                     , lens
                     , mtl
                     , sqlite-simple
                     , sqlite-simple-errors
                     , text
                     , time
                     , validation
                     , vector

  build-depends:
                       aeson >=1.4 && <1.5
                     , bytestring >=0.10 && <0.11
                     , http-client >=0.5 && <0.6
                     , lucid >=2.9 && <2.10
                     , optparse-applicative >=0.14 && <0.15
                     , servant >=0.16 && <0.17
                     , servant-lucid >=0.9 && <0.10
                     , servant-server >=0.16 && <0.17
                     , sv >=1.3 && <1.4
                     , warp >=3.2 && <3.3

  exposed-modules:     GhStats
                     , GhStats.Db
                     , GhStats.Db.Types
                     , GhStats.Main
                     , GhStats.Types
                     , GhStats.Web
                     , GitHub.Lens
  other-modules:       GitHub.Lens.Helpers
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

executable gh-stats
  import:              base
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:
                       gh-stats
  hs-source-dirs:      exe
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite tasty
  import:              base
                     , containers
                     , github
                     , lens
                     , mtl
                     , sqlite-simple
                     , sqlite-simple-errors
                     , text
                     , time
                     , validation
                     , vector

  hs-source-dirs:      test
  main-is:             Main.hs
  other-modules:       GhStats.DbTest
                     , GhStats.Test
                     , GhStats.Gens
  build-depends:
                       directory >=1.3 && <1.4
                     , gh-stats
                     , hedgehog >=1.0 && <1.1
                     , mmorph >=1.1 && <1.2
                     , tasty >=1.2 && <1.3
                     , tasty-hedgehog >=1.0 && <1.1
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
